--- a/index.html
+++ b/index.html
@@ -1,6 +1,9 @@
 <html>
 
 <body>
-<h1>hello</h1>
+
+  <figure><embed src="https://wakatime.com/share/@bangnokia/bf951775-fe7d-4c55-a47b-fcf001a44d78.svg"></embed></figure>
+
+<figure><embed src="https://wakatime.com/share/@bangnokia/4311f671-d8db-42ff-8252-a12749f595d5.svg"></embed></figure>
 </body>
 </html>
