--- a/index.html
+++ b/index.html
@@ -1,9 +1,35 @@
 <html>
+  
+  <head>
+    <style>
+      .main {
+        margin: 0;
+        padding: 0;
+      }
+      
+      .row {
+        width: 100%;
+        display: block;
+      }
+      .col {
+        width: auto;
+        float: left;
+        width: 50%;
+      }
+    </style>
+  </head>
 
 <body>
 
-  <figure><embed src="https://wakatime.com/share/@bangnokia/bf951775-fe7d-4c55-a47b-fcf001a44d78.svg"></embed></figure>
-
-<figure><embed src="https://wakatime.com/share/@bangnokia/4311f671-d8db-42ff-8252-a12749f595d5.svg"></embed></figure>
+  <div class="main">
+    <div class="row">
+      <div class="col">
+          <figure><embed src="https://wakatime.com/share/@bangnokia/bf951775-fe7d-4c55-a47b-fcf001a44d78.svg"></embed></figure>
+      </div>
+      <div class="col">
+        <figure><embed src="https://wakatime.com/share/@bangnokia/4311f671-d8db-42ff-8252-a12749f595d5.svg"></embed></figure>
+      </div>
+    </div>
+  </div>
 </body>
 </html>
