--- a/index.html
+++ b/index.html
@@ -1,12 +1,13 @@
+<!DOCTYPE html>
 <html>
-  
   <head>
+    <title>daudau's stats</title>
     <style>
       .main {
         margin: 0;
         padding: 0;
       }
-      
+
       .row {
         width: 100%;
         display: block;
