add editor char

--- a/index.html
+++ b/index.html
@@ -23,6 +23,7 @@
 <body>
 
   <div class="main">
+
     <div class="row">
       <div class="col">
           <figure><embed src="https://wakatime.com/share/@bangnokia/bf951775-fe7d-4c55-a47b-fcf001a44d78.svg"></embed></figure>
@@ -30,7 +31,11 @@
       <div class="col">
         <figure><embed src="https://wakatime.com/share/@bangnokia/4311f671-d8db-42ff-8252-a12749f595d5.svg"></embed></figure>
       </div>
+	  <div class="col">
+		  <figure><embed src="https://wakatime.com/share/@bangnokia/55022cc6-b76c-41ba-b404-31e58b192aa2.svg"></embed></figure>
+	  </div>
     </div>
+
   </div>
 </body>
 </html>
