deploy: 6ae0c8276505f4ec4ca0d4b34ae0e22d7af662e0

--- a/wakatime.html
+++ b/wakatime.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>Home page</title>
+	<title>wakatime</title>
 
     <link href="https://unpkg.com/tailwindcss@^1.0/dist/tailwind.min.css" rel="stylesheet">
     <link rel="stylesheet" type="text/css" href="/css/app.css">
@@ -10,21 +10,20 @@
 	<link href="https://fonts.googleapis.com/css2?family=Inconsolata:wght@400&display=swap" rel="stylesheet">
 </head>
 <body>
-	<div class="pl-2 pt-2 max-w-xl">
+	<div class="pl-2 pt-2 ">
 		 <div class="flex space-x-5">
 	<a href="/" class="text-teal-500 hover:underline">Home</a>
 	<a href="/wakatime.html" class="text-teal-500 hover:underline">wakatime</a>
 </div>
  
 		<div class="mt-5">
-			<ul>
-					<li>
-				<div class="text-gray-600">
-					[2020-11-17]
-				</div>
-				<a href="/posts/why-i-wrote-pekyll.html">Tao blog với pekyll - Tai sao minh viết Pekyll xD</a>
-			</li>
-			</ul>
+			<div class="grid grid-cols-3 gap-5">
+		<embed src="https://wakatime.com/share/@bangnokia/bf951775-fe7d-4c55-a47b-fcf001a44d78.svg"></embed>
+
+		<embed src="https://wakatime.com/share/@bangnokia/4311f671-d8db-42ff-8252-a12749f595d5.svg"></embed>
+
+		<embed src="https://wakatime.com/share/@bangnokia/55022cc6-b76c-41ba-b404-31e58b192aa2.svg"></embed>
+	</div>
 		</div>
 	</div>
 </body>
