--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 				<div class="text-gray-600">
 					[2020-11-17]
 				</div>
-				<a href="/posts/why-i-wrote-pekyll.html">Tao blog với pekyll - Tai sao minh viết Pekyll xD</a>
+				<a href="/posts/why-i-wrote-pekyll.html">Static blog đơn giản với pekyll</a>
 			</li>
 			</ul>
 		</div>
