deploy: 6ec7c5efed76a926b686f55453c6d8068543e0b4

--- a/index.html
+++ b/index.html
@@ -1,8 +1,9 @@
 <!DOCTYPE html>
-<html>
+<html lang="vi">
 <head>
-	<title>Home page</title>
+	<title>daudau&#039;s stubs</title>
 
+	<link rel="icon" type="image/png" href="/images/favicon-32x32.png">
     <link href="https://unpkg.com/tailwindcss@^1.0/dist/tailwind.min.css" rel="stylesheet">
     <link rel="stylesheet" type="text/css" href="/css/app.css">
     <script src="https://cdn.jsdelivr.net/gh/alpinejs/alpine@v2.x.x/dist/alpine.min.js" defer></script>
