deploy: f04afb181918b6c80aa742071633c4efc5e0171e

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 				<div class="text-gray-600">
 					[2020-11-17]
 				</div>
-				<a href="/posts/why-i-wrote-pekyll.html">Static blog đơn giản với pekyll</a>
+				<a href="/posts/i-wrote-pekyll.html">Static blog đơn giản với pekyll</a>
 			</li>
 			</ul>
 		</div>
