--- a/wakatime.html
+++ b/wakatime.html
@@ -3,6 +3,7 @@
 <head>
 	<title>wakatime</title>
 
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<link rel="icon" type="image/png" href="/images/favicon-32x32.png">
     <link href="https://unpkg.com/tailwindcss@^1.0/dist/tailwind.min.css" rel="stylesheet">
     <link rel="stylesheet" type="text/css" href="/css/app.css">
