deploy: 5a55259c88fb1c45bfb8d489ca3e5021a90b9a0a

--- a/index.html
+++ b/index.html
@@ -21,10 +21,8 @@
 		<div class="mt-5">
 			<ul>
 					<li>
-				<div class="text-gray-600">
-					[2020-11-17]
-				</div>
-				<a href="/posts/i-wrote-pekyll.html">Static blog đơn giản với pekyll</a>
+				<a href="/posts/i-wrote-pekyll.html">Static blog với pekyll</a>
+				<span class="text-gray-500">[2020-11-17]</span>
 			</li>
 			</ul>
 		</div>
