deploy: d4d491a67da6e94c2aaf1c41221f135d377f7f10

--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="vi">
 <head>
-	<title>daudau&#039;s stubs</title>
+	<title>daudau's blog</title>
 
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
@@ -18,7 +18,7 @@
 	<a href="/wakatime.html" class="text-cyan-500 hover:underline">wakatime</a>
 </div>
  
-		<div class="mt-5">
+		<div class="mt-10">
 			<ul>
 					<li>
 				<a href="/posts/i-wrote-pekyll.html">Static blog với pekyll</a>
