--- a/wakatime.html
+++ b/wakatime.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="vi">
 <head>
-	<title>wakatime</title>
+	<title>wakatime | daudau's blog</title>
 
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
@@ -18,7 +18,7 @@
 	<a href="/wakatime.html" class="text-cyan-500 hover:underline">wakatime</a>
 </div>
  
-		<div class="mt-5">
+		<div class="mt-10">
 			<div class="grid grid-cols-3 gap-5">
 		<embed src="https://wakatime.com/share/@bangnokia/bf951775-fe7d-4c55-a47b-fcf001a44d78.svg"></embed>
 
