deploy: f71eae85b33a3baf09b71c3793a5b004a8912b1d

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 		<div class="mt-10">
 			<ul>
 					<li>
-				<a href="/posts/i-wrote-pekyll.html">Static blog với pekyll</a>
+				- <a href="/posts/i-wrote-pekyll.html">Static blog với pekyll</a>
 				<span class="text-gray-500">[2020-11-17]</span>
 			</li>
 			</ul>
