deploy: 6cb6a8f7c2b47bdcf7c743bef577699129fc144c

--- a/index.html
+++ b/index.html
@@ -21,8 +21,8 @@
 		<div class="mt-10">
 			<ul>
 					<li>
-				- <a href="/posts/i-wrote-pekyll.html">Static blog với pekyll</a>
-				<span class="text-gray-500">[2020-11-17]</span>
+				<a href="/posts/i-wrote-pekyll.html">Static blog với pekyll</a>
+				- <time class="text-gray-500">2020-11-17</time>
 			</li>
 			</ul>
 		</div>
