deploy: f156ee240d0354ad5c6544a5596d17211f4c3fba

--- a/index.html
+++ b/index.html
@@ -24,6 +24,10 @@
 				<a href="/posts/i-wrote-pekyll.html">Static blog với pekyll</a>
 				- <time class="text-gray-500">2020-11-17</time>
 			</li>
+					<li>
+				<a href="/posts/huong-dan-doc-nhan-cafe.html">Hướng dẫn đọc nhãn cafe</a>
+				- <time class="text-gray-500">2021-01-16</time>
+			</li>
 			</ul>
 		</div>
 	</div>
