--- a/wakatime.html
+++ b/wakatime.html
@@ -14,8 +14,8 @@
 <body>
 	<div class="pl-2 pt-2 ">
 		 <div class="flex space-x-5">
-	<a href="/" class="text-cyan-500 hover:underline">Home</a>
-	<a href="/wakatime.html" class="text-cyan-500 hover:underline">wakatime</a>
+	<a href="/" class="text-gray-500 hover:underline">Home</a>
+	<a href="/wakatime.html" class="text-gray-500 hover:underline">wakatime</a>
 </div>
  
 		<div class="mt-10">
