deploy: 9eaf3c333197fb8f4c6d4a37a86c0245158dc541

--- a/wakatime.html
+++ b/wakatime.html
@@ -12,13 +12,13 @@
     <script src="https://cdn.jsdelivr.net/gh/alpinejs/alpine@v2.x.x/dist/alpine.min.js" defer></script>
 </head>
 <body>
-	<div class="pl-2 pt-2 ">
+	<div class="main-body flex-col pl-2 pt-2 ">
 		 <div class="flex space-x-5">
 	<a href="/" class="text-gray-500 hover:underline">Home</a>
 	<a href="/wakatime.html" class="text-gray-500 hover:underline">wakatime</a>
 </div>
  
-		<div class="mt-10">
+		<div class="mt-20 flex-grow">
 			<div class="grid grid-cols-2 gap-5">
 		<embed src="https://wakatime.com/share/@bangnokia/bf951775-fe7d-4c55-a47b-fcf001a44d78.svg"></embed>
 
@@ -27,6 +27,10 @@
 		<embed src="https://wakatime.com/share/@bangnokia/55022cc6-b76c-41ba-b404-31e58b192aa2.svg"></embed>
 	</div>
 		</div>
+
+		<footer class="mt-20 flex-none">
+			<p class="text-sm" class=>crafted by <a href="http://github.com/bangnokia/pekyll" target="_blank">pekyll</a>.</p>
+		</footer>
 	</div>
 
 	<script async src="https://www.googletagmanager.com/gtag/js?id=UA-37232412-22"></script>
