--- a/index.html
+++ b/index.html
@@ -12,13 +12,13 @@
     <script src="https://cdn.jsdelivr.net/gh/alpinejs/alpine@v2.x.x/dist/alpine.min.js" defer></script>
 </head>
 <body>
-	<div class="pl-2 pt-2 max-w-xl">
+	<div class="main-body flex-col pl-2 pt-2 max-w-xl">
 		 <div class="flex space-x-5">
 	<a href="/" class="text-gray-500 hover:underline">Home</a>
 	<a href="/wakatime.html" class="text-gray-500 hover:underline">wakatime</a>
 </div>
  
-		<div class="mt-10">
+		<div class="mt-20 flex-grow">
 			<ul>
 					<li class="mt-5">
 				<a href="/posts/i-wrote-pekyll.html">Static blog với pekyll</a>
@@ -26,6 +26,10 @@
 			</li>
 			</ul>
 		</div>
+
+		<footer class="mt-20 flex-none">
+			<p class="text-sm" class=>crafted by <a href="http://github.com/bangnokia/pekyll" target="_blank">pekyll</a>.</p>
+		</footer>
 	</div>
 
 	<script async src="https://www.googletagmanager.com/gtag/js?id=UA-37232412-22"></script>
