deploy: 74adfa018c190ecfd91d158056abd143ef448e5f

--- a/index.html
+++ b/index.html
@@ -12,13 +12,15 @@
     <script src="https://cdn.jsdelivr.net/gh/alpinejs/alpine@v2.x.x/dist/alpine.min.js" defer></script>
 </head>
 <body>
-	<div class="main-body flex-col pl-2 pt-2 max-w-xl">
-		 <div class="flex space-x-5">
+	<div class="main-body flex flex-col min-h-screen px-5 pt-5 max-w-xl">
+		 <div class="flex space-x-5 flex-none">
 	<a href="/" class="text-gray-500 hover:underline">Home</a>
-	<a href="/wakatime.html" class="text-gray-500 hover:underline">wakatime</a>
+    <a href="/open-sources.html" class="text-gray-500 hover:underline">Open sources</a>
+	<!-- <a href="/wakatime.html" class="text-gray-500 hover:underline">wakatime</a> -->
 </div>
  
-		<div class="mt-20 flex-grow">
+
+		<div class="mt-20 flex-grow flex-shrink flex-1">
 			<ul>
 					<li class="mt-5">
 				<a href="/posts/i-wrote-pekyll.html">Static blog với pekyll</a>
@@ -27,8 +29,12 @@
 			</ul>
 		</div>
 
-		<footer class="mt-20 flex-none">
-			<p class="text-sm" class=>crafted by <a href="http://github.com/bangnokia/pekyll" target="_blank">pekyll</a>.</p>
+		<footer class="flex-none flex justify-between h-12 border-t pt-3">
+			<div>
+				<a href="https://github.com/bangnokia" title="github">github</a>
+				<a href="https://facebook"></a>
+			</div>
+			<p>crafted by <a href="http://github.com/bangnokia/pekyll" target="_blank">pekyll</a>.</p>
 		</footer>
 	</div>
 
