--- a/wakatime.html
+++ b/wakatime.html
@@ -12,13 +12,15 @@
     <script src="https://cdn.jsdelivr.net/gh/alpinejs/alpine@v2.x.x/dist/alpine.min.js" defer></script>
 </head>
 <body>
-	<div class="main-body flex-col pl-2 pt-2 ">
-		 <div class="flex space-x-5">
+	<div class="main-body flex flex-col min-h-screen px-5 pt-5 ">
+		 <div class="flex space-x-5 flex-none">
 	<a href="/" class="text-gray-500 hover:underline">Home</a>
-	<a href="/wakatime.html" class="text-gray-500 hover:underline">wakatime</a>
+    <a href="/open-sources.html" class="text-gray-500 hover:underline">Open sources</a>
+	<!-- <a href="/wakatime.html" class="text-gray-500 hover:underline">wakatime</a> -->
 </div>
  
-		<div class="mt-20 flex-grow">
+
+		<div class="mt-20 flex-grow flex-shrink flex-1">
 			<div class="grid grid-cols-2 gap-5">
 		<embed src="https://wakatime.com/share/@bangnokia/bf951775-fe7d-4c55-a47b-fcf001a44d78.svg"></embed>
 
@@ -28,8 +30,12 @@
 	</div>
 		</div>
 
-		<footer class="mt-20 flex-none">
-			<p class="text-sm" class=>crafted by <a href="http://github.com/bangnokia/pekyll" target="_blank">pekyll</a>.</p>
+		<footer class="flex-none flex justify-between h-12 border-t pt-3">
+			<div>
+				<a href="https://github.com/bangnokia" title="github">github</a>
+				<a href="https://facebook"></a>
+			</div>
+			<p>crafted by <a href="http://github.com/bangnokia/pekyll" target="_blank">pekyll</a>.</p>
 		</footer>
 	</div>
 
