--- a/open-sources.html
+++ b/open-sources.html
@@ -4,7 +4,7 @@
 	<title>Open sources | daudau's blog</title>
 
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-
+    <meta name="description" content="personal blog by Bang. I write stupid stuff with words and code.">
 	<link rel="icon" type="image/png" href="/images/favicon-32x32.png">
     <link rel="stylesheet" type="text/css" href="/css/app.css">
     <link rel="preconnect" href="https://fonts.gstatic.com">
