--- a/open-sources.html
+++ b/open-sources.html
@@ -79,15 +79,14 @@
 		</div>
 
 		<footer class="flex-none flex justify-between h-12 border-t pt-3">
+			<p>built with <a href="http://github.com/bangnokia/pekyll" target="_blank">pekyll</a>.</p>
 			<div>
 				<a href="https://github.com/bangnokia" title="github">github</a>
 				<a href="https://facebook"></a>
 			</div>
-			<p>crafted by <a href="http://github.com/bangnokia/pekyll" target="_blank">pekyll</a>.</p>
 		</footer>
 	</div>
 
-    <script src="https://cdn.jsdelivr.net/gh/alpinejs/alpine@v2.x.x/dist/alpine.min.js" defer></script>
 	<script async src="https://www.googletagmanager.com/gtag/js?id=UA-37232412-22"></script>
 	<script>
 	  window.dataLayer = window.dataLayer || [];
