--- a/wakatime.html
+++ b/wakatime.html
@@ -30,7 +30,7 @@
 		</div>
 
 		<footer class="flex-none flex justify-between h-12 border-t pt-3">
-			<p>built with <a href="http://github.com/bangnokia/pekyll" target="_blank">pekyll</a>.</p>
+			<p>crafted by <a href="http://github.com/bangnokia/pekyll" target="_blank">pekyll</a> with ❤️.</p>
 			<div>
 				<a href="https://github.com/bangnokia" title="github">github</a>
 				<a href="https://facebook"></a>
