--- a/wakatime.html
+++ b/wakatime.html
@@ -14,7 +14,7 @@
 	<div class="main-body flex flex-col min-h-screen px-5 pt-5 ">
 		 <div class="flex space-x-5 flex-none">
 	<a href="/" class="text-gray-500 hover:underline">Home</a>
-    <a href="/open-sources.html" class="text-gray-500 hover:underline">Open sources</a>
+    <a href="/open-source.html" class="text-gray-500 hover:underline">Open source</a>
 	<!-- <a href="/wakatime.html" class="text-gray-500 hover:underline">wakatime</a> -->
 </div>
  
