--- a/wakatime.html
+++ b/wakatime.html
@@ -15,7 +15,7 @@
 		 <div class="flex space-x-5 flex-none">
 	<a href="/" class="text-gray-500 hover:underline">Home</a>
     <a href="/open-source.html" class="text-gray-500 hover:underline">Open source</a>
-	<!-- <a href="/wakatime.html" class="text-gray-500 hover:underline">wakatime</a> -->
+    <a href="/wakatime.html" class="text-gray-500 hover:underline">wakatime</a>
 </div>
  
 
