deploy: 746c589547d4ddceba01d2e2bc7097052d0ddccb

--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
             			</ul>
 		</div>
 
-		<footer class="flex-none flex justify-between h-12 border-t pt-3">
+		<footer class="flex-none flex justify-between h-12 border-t pt-3 mt-10">
 			<p>crafted by <a href="http://github.com/bangnokia/pekyll" target="_blank">pekyll</a> with ❤️.</p>
 			<div>
 				<a href="https://github.com/bangnokia" title="github">github</a>
