--- a/wakatime.html
+++ b/wakatime.html
@@ -29,7 +29,7 @@
 	</div>
 		</div>
 
-		<footer class="flex-none flex justify-between h-12 border-t pt-3">
+		<footer class="flex-none flex justify-between h-12 border-t pt-3 mt-10">
 			<p>crafted by <a href="http://github.com/bangnokia/pekyll" target="_blank">pekyll</a> with ❤️.</p>
 			<div>
 				<a href="https://github.com/bangnokia" title="github">github</a>
