deploy: 7da3f750e43daabb8dc8b93f76ebf2d35ec95e92

--- a/wakatime.html
+++ b/wakatime.html
@@ -11,7 +11,7 @@
 	<link href="https://fonts.googleapis.com/css2?family=Inconsolata:wght@400&display=swap" rel="stylesheet">
 </head>
 <body>
-	<div class="main-body flex flex-col min-h-screen px-5 pt-5 ">
+	<div class="main-body mx-auto flex flex-col min-h-screen px-5 pt-5 ">
 		 <div class="flex space-x-5 flex-none">
 	<a href="/" class="text-gray-500 hover:underline">Home</a>
     <a href="/open-source.html" class="text-gray-500 hover:underline">Open source</a>
