deploy: e3abf5fee3bb2c2fa48388913ea40283b25e435c

--- a/open-source.html
+++ b/open-source.html
@@ -15,7 +15,6 @@
 		 <div class="flex space-x-5 flex-none">
 	<a href="/" class="text-gray-500 hover:underline">Home</a>
     <a href="/open-source.html" class="text-gray-500 hover:underline">Open source</a>
-    <a href="/wakatime.html" class="text-gray-500 hover:underline">wakatime</a>
 </div>
  
 
@@ -78,12 +77,12 @@
             </div>
 		</div>
 
-		<footer class="flex-none flex justify-between h-12 border-t pt-3 mt-10">
+		<footer class="text-sm flex-none flex justify-end h-12 border-t pt-3 mt-10 space-x-2">
+			<a href="https://github.com/bangnokia" title="github">my github</a>
+			<span>|</span>
+			<a href="/wakatime.html">wakatime</a>
+			<span>|</span>
 			<p>crafted by <a href="http://github.com/bangnokia/pekyll" target="_blank">pekyll</a> with ❤️.</p>
-			<div>
-				<a href="https://github.com/bangnokia" title="github">github</a>
-				<a href="https://facebook"></a>
-			</div>
 		</footer>
 	</div>
 
