--- a/open-source.html
+++ b/open-source.html
@@ -77,7 +77,7 @@
             </div>
 		</div>
 
-		<footer class="text-sm flex-none flex justify-end h-12 border-t pt-3 mt-10 space-x-2">
+		<footer class="text-sm flex justify-end h-12 border-t pt-3 mt-10 space-x-2">
 			<a href="https://github.com/bangnokia" title="github">my github</a>
 			<span>|</span>
 			<a href="/wakatime.html">wakatime</a>
