--- a/open-source.html
+++ b/open-source.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="personal blog by Bang. I write stupid stuff with words and code.">
 	<link rel="icon" type="image/png" href="/images/favicon-32x32.png">
-    <link rel="stylesheet" type="text/css" href="/css/app.css?v=1616464745">
+    <link rel="stylesheet" type="text/css" href="/css/app.css?v=1616521775">
     <link rel="preconnect" href="https://fonts.gstatic.com">
 	<link href="https://fonts.googleapis.com/css2?family=Inconsolata:wght@400&display=swap" rel="stylesheet">
 </head>
@@ -37,7 +37,7 @@
             32
         </div>
     </div>
-    <p class="mt-3">Laravel artisan serve command integrated with live reloading</p>
+    <p class="mt-3">Laravel live reload implements into `artisan serve` command with live reloading websockets</p>
 </div>
  
                      <div class="border py-5 px-3">
