--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="personal blog by Bang. I write stupid stuff with words and code.">
 	<link rel="icon" type="image/png" href="/images/favicon-32x32.png">
-    <link rel="stylesheet" type="text/css" href="/css/app.css?v=1617122332">
+    <link rel="stylesheet" type="text/css" href="/css/app.css?v=1617122407">
     <link rel="preconnect" href="https://fonts.gstatic.com">
 	<link href="https://fonts.googleapis.com/css2?family=Inconsolata:wght@400&display=swap" rel="stylesheet">
     </head>
@@ -26,7 +26,7 @@
                         <div class="text-gray-600"></div>
                     </div>
 
-                    <a href="/posts/laravel-live-reload-without-javascript.html" class="text-lg">Laravel live reloading without any npm package</a>
+                    <a href="/posts/laravel-live-reload-without-javascript.html" class="text-lg">Laravel live reloading without any js stuff</a>
                 </li>
             		                            <li class="mt-5">
                     <div class="block text-sm flex space-x-5 content-end">
