--- a/about.html
+++ b/about.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="personal blog by Bang. I write stupid stuff with words and code.">
 	<link rel="icon" type="image/png" href="/images/favicon-32x32.png">
-    <link rel="stylesheet" type="text/css" href="/css/app.css?v=1617768796">
+    <link rel="stylesheet" type="text/css" href="/css/app.css?v=1617769120">
     <link rel="preconnect" href="https://fonts.gstatic.com">
 	<link href="https://fonts.googleapis.com/css2?family=Inconsolata:wght@400&display=swap" rel="stylesheet">
     </head>
@@ -33,7 +33,7 @@
         </div>
 
         <div class="mt-10 leanding-10">
-            You can get in touch with me via <a href="mailto:bang@daudau.cc">bang@daudau.cc</a>, <a href="https://github.com/bangnokia" target="_blank">my Github</a> or <a href="https://twitter.com/bangnokia" target="_blank">Twitter</a>.
+            You can get in touch with me via <a href="mailto:bang@daudau.cc">bang@daudau.cc</a>, <a href="https://github.com/bangnokia" target="_blank">Github</a> or <a href="https://twitter.com/bangnokia" target="_blank">Twitter</a>.
         </div>
 
         <div class="mt-10 leading-8">
