--- a/open-source.html
+++ b/open-source.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="personal blog by Bang. I write stupid stuff with words and code.">
 	<link rel="icon" type="image/png" href="/images/favicon-32x32.png">
-    <link rel="stylesheet" type="text/css" href="/css/app.css?v=1617770901">
+    <link rel="stylesheet" type="text/css" href="/css/app.css?v=1617771062">
     <link rel="preconnect" href="https://fonts.gstatic.com">
 	<link href="https://fonts.googleapis.com/css2?family=Inconsolata:wght@400&display=swap" rel="stylesheet">
     </head>
@@ -79,7 +79,7 @@
 
 		<footer class="text-sm flex justify-end h-12 border-t pt-3 mt-10 space-x-2">
 			<a href="/about.html" title="github" class="text-gray-500">about</a>
-			<span>|</span>
+			<span>-</span>
 			<p>crafted by <a href="http://github.com/bangnokia/pekyll" target="_blank">pekyll</a> with ❤️.</p>
 		</footer>
 	</div>
