--- a/about.html
+++ b/about.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="personal blog by Bang. I write stupid stuff with words and code.">
 	<link rel="icon" type="image/png" href="/images/favicon-32x32.png">
-    <link rel="stylesheet" type="text/css" href="/css/app.css?v=1617952902">
+    <link rel="stylesheet" type="text/css" href="/css/app.css?v=1617953988">
     <link rel="preconnect" href="https://fonts.gstatic.com">
 	<link href="https://fonts.googleapis.com/css2?family=Inconsolata:wght@400&display=swap" rel="stylesheet">
     </head>
@@ -20,9 +20,11 @@
 
 		<div class="mt-20 flex-grow flex-shrink flex-1">
 			<div>
-        <h1 class="text-5xl text-cyan-500 font-bold">你好</h1>
+        <div class="float-left mb-2 mr-2">
+            <img src="/images/me-angry.png" alt="me angry xD - @open  peeps" class="w-48">
+        </div>
 
-        <h2 class="text-2xl font-bold mt-10">Hello, my name is <span class="text-cyan-500">Bang Nguyen Viet</span></h2>
+        <h1 class="text-2xl font-bold mt-10">Hello, my name is <span class="text-cyan-500">Bang Nguyen Viet</span></h1>
 
         <div class="mt-10 leading-8">
             I'm a developer from Viet Nam.
