deploy: 9567f32904fa7f74213554b9273fc0f2063af55f

--- a/wakatime.html
+++ b/wakatime.html
@@ -1,14 +1,24 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-	<title>wakatime | daudau's blog</title>
+	<title>wakatime - daudau&#039;s blog</title>
 
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="personal blog by Bang. I write stupid stuff with words and code.">
+    <meta name="description" content="personal blog by Bang. I write stupid stuff with words and code">
+
+    <meta name="twitter:creator" content="@bangnokia">
+    <meta name="twitter:card" content="article">
+    <meta name="twitter:description" content="personal blog by Bang. I write stupid stuff with words and code">
+
+    <meta name="og:title" content="wakatime - daudau&#039;s blog">
+    <meta name="og:description" content="personal blog by Bang. I write stupid stuff with words and code">
+    <meta name="og:type" content="article">
+
 	<link rel="icon" type="image/png" href="/images/favicon-32x32.png">
-    <link rel="stylesheet" type="text/css" href="/css/app.css?v=1618473917">
+    <link rel="stylesheet" type="text/css" href="/css/app.css?v=1618479930">
     <link rel="preconnect" href="https://fonts.gstatic.com">
 	<link href="https://fonts.googleapis.com/css2?family=Inconsolata:wght@400&display=swap" rel="stylesheet">
+
     </head>
 <body>
 	<div class="main-body mx-auto flex flex-col min-h-screen px-5 pt-5 ">
