deploy: fd7be7a79ebb557dd1f75f29b2dfe7282104bdd1

--- a/wakatime.html
+++ b/wakatime.html
@@ -7,7 +7,7 @@
     <meta name="description" content="personal blog by Bang. I write stupid stuff with words and code">
 
     <meta name="twitter:creator" content="@bangnokia">
-    <meta name="twitter:card" content="article">
+    <meta name="twitter:card" content="summary">
     <meta name="twitter:description" content="personal blog by Bang. I write stupid stuff with words and code">
 
     <meta name="og:title" content="wakatime - daudau&#039;s blog">
@@ -15,7 +15,7 @@
     <meta name="og:type" content="article">
 
 	<link rel="icon" type="image/png" href="/images/favicon-32x32.png">
-    <link rel="stylesheet" type="text/css" href="/css/app.css?v=1618479930">
+    <link rel="stylesheet" type="text/css" href="/css/app.css?v=1618480072">
     <link rel="preconnect" href="https://fonts.gstatic.com">
 	<link href="https://fonts.googleapis.com/css2?family=Inconsolata:wght@400&display=swap" rel="stylesheet">
 
