deploy: 581ae87b305095c163eb71feaf6f65ebf21f82b2

--- a/wakatime.html
+++ b/wakatime.html
@@ -16,7 +16,7 @@
 
     
 	<link rel="icon" type="image/png" href="/images/favicon-32x32.png">
-    <link rel="stylesheet" type="text/css" href="/css/app.css?v=1619025378">
+    <link rel="stylesheet" type="text/css" href="/css/app.css?v=1619172178">
     <link rel="preconnect" href="https://fonts.gstatic.com">
 	<link href="https://fonts.googleapis.com/css2?family=Inconsolata:wght@400&display=swap" rel="stylesheet">
 
@@ -47,13 +47,9 @@
 	</div>
 
     
-	<script async src="https://www.googletagmanager.com/gtag/js?id=UA-37232412-22"></script>
-	<script>
-	  window.dataLayer = window.dataLayer || [];
-	  function gtag(){dataLayer.push(arguments);}
-	  gtag('js', new Date());
-	  gtag('config', 'UA-37232412-22');
-	</script>
+    <!-- Cloudflare Web Analytics -->
+    <script defer src='https://static.cloudflareinsights.com/beacon.min.js' data-cf-beacon='{"token": "30a5b4429388482ab4d3e7868edaf598"}'></script>
+    <!-- End Cloudflare Web Analytics -->
 </body>
 </html>
  
