deploy: 2025fe4e8bf9f67bb615e97a9c299470e3489a18

--- a/projects.html
+++ b/projects.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-	<title>Projects - daudau&#039;s blog</title>
+	<title>Open sources - daudau&#039;s blog</title>
 
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="personal blog by Bang. I write stupid stuff with words and code">
@@ -10,13 +10,13 @@
     <meta name="twitter:card" content="summary">
     <meta name="twitter:description" content="personal blog by Bang. I write stupid stuff with words and code">
 
-    <meta name="og:title" content="Projects - daudau&#039;s blog">
+    <meta name="og:title" content="Open sources - daudau&#039;s blog">
     <meta name="og:description" content="personal blog by Bang. I write stupid stuff with words and code">
     <meta name="og:type" content="article">
 
     
 	<link rel="icon" type="image/png" href="/images/favicon-32x32.png">
-    <link rel="stylesheet" type="text/css" href="/css/app.css?v=1636520778">
+    <link rel="stylesheet" type="text/css" href="/css/app.css?v=1636520779">
     <link rel="preconnect" href="https://fonts.gstatic.com">
 	<link href="https://fonts.googleapis.com/css2?family=Inconsolata:wght@400&display=swap" rel="stylesheet">
 
