--- a/wakatime.html
+++ b/wakatime.html
@@ -16,7 +16,7 @@
 
     
 	<link rel="icon" type="image/png" href="/images/favicon-32x32.png">
-    <link rel="stylesheet" type="text/css" href="/css/app.css?v=1636442227">
+    <link rel="stylesheet" type="text/css" href="/css/app.css?v=1636520779">
     <link rel="preconnect" href="https://fonts.gstatic.com">
 	<link href="https://fonts.googleapis.com/css2?family=Inconsolata:wght@400&display=swap" rel="stylesheet">
 
@@ -24,8 +24,9 @@
 <body>
 	<div class="main-body mx-auto flex flex-col min-h-screen px-5 pt-5 ">
 		<div class="flex space-x-5 flex-none">
-	<a href="/" class="text-gray-500 hover:underline">Home</a>
-    <a href="/open-source.html" class="text-gray-500 hover:underline">Open source</a>
+	<a href="/" class="text-gray-500 hover:underline">home</a>
+    <a href="/projects.html" class="text-gray-500 hover:underline">projects</a>
+    <a href="/about.html" class="text-gray-500 hover:underline">about me</a>
 </div>
 
 		<div class="mt-20 flex-grow flex-shrink flex-1">
@@ -39,8 +40,6 @@
 		</div>
 
 		<footer class="text-sm flex justify-end h-12 border-t pt-3 mt-10 space-x-2">
-			<a href="/about.html" title="github" class="text-gray-500">about</a>
-			<span>-</span>
 			<p>crafted by <a href="http://github.com/bangnokia/pekyll" target="_blank">pekyll</a> with ❤️.</p>
 		</footer>
 	</div>
