--- a/projects.html
+++ b/projects.html
@@ -16,7 +16,7 @@
 
     
 	<link rel="icon" type="image/png" href="/images/favicon-32x32.png">
-    <link rel="stylesheet" type="text/css" href="/css/app.css?v=1636520779">
+    <link rel="stylesheet" type="text/css" href="/css/app.css?v=1636582300">
     <link rel="preconnect" href="https://fonts.gstatic.com">
 	<link href="https://fonts.googleapis.com/css2?family=Inconsolata:wght@400&display=swap" rel="stylesheet">
 
@@ -34,6 +34,21 @@
     <p>Some stupid stuff wrote on my freetime.</p>
 
     <div class="grid mt-10 space-y-5 grid-cols-1">
+                    <div class="border py-5 px-3">
+    <div class="flex items-center justify-between">
+        <div class="flex items-center">
+            <a class="text-2xl text-cyan-500 font-semi-bold" href="https://github.com/bangnokia/tinker2" target="_blank" title="tinker2">tinker2</a>
+        </div>
+        <div class="flex items-center">
+            <span class="mr-5 font-bold">
+                JavaScript
+            </span>
+            <svg class="w-4 h-4 inline mr-1" fill="none" stroke="currentColor" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M11.049 2.927c.3-.921 1.603-.921 1.902 0l1.519 4.674a1 1 0 00.95.69h4.915c.969 0 1.371 1.24.588 1.81l-3.976 2.888a1 1 0 00-.363 1.118l1.518 4.674c.3.922-.755 1.688-1.538 1.118l-3.976-2.888a1 1 0 00-1.176 0l-3.976 2.888c-.783.57-1.838-.197-1.538-1.118l1.518-4.674a1 1 0 00-.363-1.118l-3.976-2.888c-.784-.57-.38-1.81.588-1.81h4.914a1 1 0 00.951-.69l1.519-4.674z"></path></svg>
+            3
+        </div>
+    </div>
+    <p class="mt-3">PHP tinker desktop app.</p>
+</div>
                     <div class="border py-5 px-3">
     <div class="flex items-center justify-between">
         <div class="flex items-center">
