work in progress

--- a/src/app.html
+++ b/src/app.html
@@ -8,7 +8,7 @@
 		<meta name="twitter:card" content="summary_large_image">
 		%svelte.head%
 	</head>
-	<body>
+	<body class="bg-orange-50">
 	%svelte.body%
 	</body>
 </html>
