--- a/src/app.html
+++ b/src/app.html
@@ -8,7 +8,7 @@
 		<meta name="twitter:card" content="summary_large_image">
 		%svelte.head%
 	</head>
-	<body class="bg-orange-50">
+	<body>
 	%svelte.body%
 	</body>
 </html>
