--- a/src/app.html
+++ b/src/app.html
@@ -7,6 +7,7 @@
 		<meta name="twitter:creator" content="@bangnokia">
 		<meta name="twitter:card" content="summary_large_image">
 		%svelte.head%
+        <script async src="https://cdn.splitbee.io/sb.js"></script>
 	</head>
 	<body>
 	%svelte.body%
