--- a/src/app.html
+++ b/src/app.html
@@ -1,14 +1,14 @@
 <!DOCTYPE html>
 <html lang="en">
 	<head>
-		<link rel="icon" href="%svelte.assets%/favicon.png" />
+		<link rel="icon" href="%sveltekit.assets%/favicon.png" />
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
 		<meta name="twitter:creator" content="@bangnokia">
 		<meta name="twitter:card" content="summary_large_image">
-		%svelte.head%
+		%sveltekit.head%
 	</head>
 	<body>
-	%svelte.body%
+	%sveltekit.body%
 	</body>
 </html>
