--- a/src/app.html
+++ b/src/app.html
@@ -1,15 +1,15 @@
 <!DOCTYPE html>
 <html lang="en">
 	<head>
-		<link rel="icon" href="%sveltekit.assets%/favicon.png" />
+		<link rel="icon" href="%svelte.assets%/favicon.png" />
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
 		<meta name="twitter:creator" content="@bangnokia">
 		<meta name="twitter:card" content="summary_large_image">
-		%sveltekit.head%
+		%svelte.head%
         <script async src="https://cdn.splitbee.io/sb.js"></script>
 	</head>
 	<body>
-	%sveltekit.body%
+	%svelte.body%
 	</body>
 </html>
