fix flickering layout

--- a/src/app.html
+++ b/src/app.html
@@ -9,7 +9,7 @@
 		%svelte.head%
         <script async src="https://cdn.splitbee.io/sb.js"></script>
 	</head>
-	<body>
+	<body style="margin-left: calc(100vw - 100%);">
 	%svelte.body%
 	</body>
 </html>
