parse markdown for index page

--- a/src/app.html
+++ b/src/app.html
@@ -12,7 +12,9 @@
 </head>
 
 <body style="margin-left: calc(100vw - 100%);">
-	%sveltekit.body%
+	<div>
+		%sveltekit.body%
+	</div>
 </body>
 
 </html>
