--- a/src/app.html
+++ b/src/app.html
@@ -9,6 +9,7 @@
 	<meta name="twitter:card" content="summary_large_image">
 	%sveltekit.head%
 	<script async src="https://cdn.splitbee.io/sb.js"></script>
+	<link rel="stylesheet" href="//cdnjs.cloudflare.com/ajax/libs/highlight.js/11.7.0/styles/default.min.css" />
 </head>
 
 <body style="margin-left: calc(100vw - 100%);">
