--- a/src/app.html
+++ b/src/app.html
@@ -7,8 +7,11 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1" />
 	<meta name="twitter:creator" content="@bangnokia">
 	<meta name="twitter:card" content="summary_large_image">
+	<link rel="preconnect" href="https://fonts.bunny.net">
+	<link
+		href="https://fonts.bunny.net/css?family=be-vietnam:300,400,500,600,700|poppins:100,100i,200,200i,300,300i,400,400i,500,500i,600,600i,700,700i,800,800i,900,900i"
+		rel="stylesheet" />
 	%sveltekit.head%
-	<link rel="stylesheet" href="//cdnjs.cloudflare.com/ajax/libs/highlight.js/11.7.0/styles/default.min.css" />
 </head>
 
 <body style="margin-left: calc(100vw - 100%);">
