--- a/src/app.html
+++ b/src/app.html
@@ -18,6 +18,18 @@
 	<div>
 		%sveltekit.body%
 	</div>
+
+
+<!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-507MRH9Q16"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-507MRH9Q16');
+</script>
+
 </body>
 
 </html>
