--- a/src/app.html
+++ b/src/app.html
@@ -21,15 +21,14 @@
 
 
 <!-- Google tag (gtag.js) -->
-<script async src="https://www.googletagmanager.com/gtag/js?id=G-507MRH9Q16"></script>
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-3Q4R375R24"></script>
 <script>
   window.dataLayer = window.dataLayer || [];
   function gtag(){dataLayer.push(arguments);}
   gtag('js', new Date());
 
-  gtag('config', 'G-507MRH9Q16');
+  gtag('config', 'G-3Q4R375R24');
 </script>
-
 </body>
 
 </html>
