--- a/index.html
+++ b/index.html
@@ -4,8 +4,11 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>home page | My awesome blog</title>
+
+    <title>My little corner | Blog of Nguyen</title>
     <meta name="description" content="Nothing here">
+
+    <link rel="icon" href="/favicon.png" type="image/x-icon">
 
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -17,14 +20,14 @@
 <body>
     <header class="container">
         <nav class="main-menu">
-            <a href="/">Home</a>
+            <a href="/">Blog</a>
             <a href="/about">About</a>
         </nav>
     </header>
 
     <main class="container" style="padding: 4rem 0 0; width: 100%; height: 100%; flex-grow: 1">
             <div>
-        <ul style="display: flex; flex-direction: column; gap: 1rem; list-style: none; padding: 0">
+        <ul style="display: flex; flex-direction: column; gap: 0.5rem; list-style: none; padding: 0">
                             <li>
                     <time class="text-sm">December 1, 2023</time>
                     <a href="/posts/setup-contabo-object-storage-in-laravel" class="block" style="padding: 0.25rem 0;">
@@ -50,12 +53,6 @@
                     </a>
                 </li>
                             <li>
-                    <time class="text-sm">June 15, 2022</time>
-                    <a href="/posts/why-you-should-learn-vim-motions" class="block" style="padding: 0.25rem 0;">
-                        Why you should learn Vim (motions)
-                    </a>
-                </li>
-                            <li>
                     <time class="text-sm">May 19, 2022</time>
                     <a href="/posts/using-telegram-to-stores-laravel-website-backup" class="block" style="padding: 0.25rem 0;">
                         Using Telegram to stores Laravel website backup
@@ -65,12 +62,6 @@
                     <time class="text-sm">April 21, 2021</time>
                     <a href="/posts/the-best-free-comment-service-for-technical-blog" class="block" style="padding: 0.25rem 0;">
                         The best &quot;Free&quot; comment service for technical blog
-                    </a>
-                </li>
-                            <li>
-                    <time class="text-sm">April 8, 2021</time>
-                    <a href="/posts/how-to-tinker-with-any-php-applications" class="block" style="padding: 0.25rem 0;">
-                        How to &quot;tinker&quot; with any PHP applications
                     </a>
                 </li>
                             <li>
@@ -100,4 +91,5 @@
         <a href="/wakatime" style="color: white">wakatime</a>
     </footer>
 </body>
+
 </html>
